infrastructure/k8s/environments/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eutlas
  labels:
    app: eutlas
